# LogAnalyzer

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: github-actions-loganalyzer.yml
loganalyzer/: loganalyzer.py
loganalyzer/config/: custom-config.yaml  default-config.yaml
loganalyzer/dto/: dto.py
loganalyzer/report-template/: report.html
